@@ -81,8 +81,6 @@ require_once __DIR__ . '/common.php';
 \define('_MI_WGEVENTS_GROUP_DISPLAY', 'Display');
 \define('_MI_WGEVENTS_EDITOR_ADMIN', 'Editor admin');
 \define('_MI_WGEVENTS_EDITOR_ADMIN_DESC', 'Select the editor which should be used in admin area for text area fields');
-\define('_MI_WGEVENTS_TABLESORTER_ADMIN', 'TableSorter Theme Admin');
-\define('_MI_WGEVENTS_TABLESORTER_ADMIN_DESC', 'Select TableSorter Theme which should be used in admin area');
 \define('_MI_WGEVENTS_EDITOR_USER', 'Editor user');
 \define('_MI_WGEVENTS_EDITOR_USER_DESC', 'Select the editor which should be used in user area for text area fields');
 \define('_MI_WGEVENTS_ADMIN_MAXCHAR', 'Text max characters admin');
@@ -91,8 +89,12 @@ require_once __DIR__ . '/common.php';
 \define('_MI_WGEVENTS_USER_MAXCHAR_DESC', 'Max characters for showing text of a textarea or editor field in user area');
 \define('_MI_WGEVENTS_ADMIN_PAGER', 'Admin pager');
 \define('_MI_WGEVENTS_ADMIN_PAGER_DESC', 'Admin per page list');
+\define('_MI_WGEVENTS_TABLESORTER_ADMIN', 'TableSorter Theme Admin');
+\define('_MI_WGEVENTS_TABLESORTER_ADMIN_DESC', 'Select TableSorter Theme which should be used in admin area');
 \define('_MI_WGEVENTS_USER_PAGER', 'User pager');
 \define('_MI_WGEVENTS_USER_PAGER_DESC', 'User per page list');
+\define('_MI_WGEVENTS_TABLESORTER_USER', 'TableSorter Theme User');
+\define('_MI_WGEVENTS_TABLESORTER_USER_DESC', 'Select TableSorter Theme which should be used in user area');
 \define('_MI_WGEVENTS_SHOWCOPYRIGHT', 'Show copyright');
 \define('_MI_WGEVENTS_SHOWCOPYRIGHT_DESC', 'You can remove the copyright from the wgteams pages, but a backlinks to www.wedega.com is expected, anywhere on your site');
 \define('_MI_WGEVENTS_SHOW_BREADCRUMBS', 'Show breadcrumb navigation');
