@@ -80,16 +80,18 @@ require_once __DIR__ . '/common.php';
 \define('_MI_WGEVENTS_GROUP_DISPLAY', 'Anzeige');
 \define('_MI_WGEVENTS_EDITOR_ADMIN', 'Editor Admin');
 \define('_MI_WGEVENTS_EDITOR_ADMIN_DESC', 'Bitte den zu verwendenden Editor für den Admin-Bereich wählen');
-\define('_MI_WGEVENTS_TABLESORTER_ADMIN', 'TableSorter Theme Admin');
-\define('_MI_WGEVENTS_TABLESORTER_ADMIN_DESC', 'Bitte das TableSorter Theme für den Admin-Bereich wählen');
 \define('_MI_WGEVENTS_EDITOR_USER', 'Editor User');
 \define('_MI_WGEVENTS_EDITOR_USER_DESC', 'Bitte den zu verwendenden Editor für den User-Bereich wählen');
 \define('_MI_WGEVENTS_ADMIN_MAXCHAR', 'Maximale Zeichen Text Adminbereich');
 \define('_MI_WGEVENTS_ADMIN_MAXCHAR_DESC', 'Maximale Anzahl an Zeichen für die Anzeige von Texten in Listen im Admin-Bereich');
 \define('_MI_WGEVENTS_USER_MAXCHAR', 'Maximale Zeichen Text Benutzerbereich');
 \define('_MI_WGEVENTS_USER_MAXCHAR_DESC', 'Maximale Anzahl an Zeichen für die Anzeige von Texten in Listen im Benutzerbereich');
+\define('_MI_WGEVENTS_TABLESORTER_ADMIN', 'TableSorter Theme Admin');
+\define('_MI_WGEVENTS_TABLESORTER_ADMIN_DESC', 'Bitte das TableSorter Theme für den Admin-Bereich wählen');
 \define('_MI_WGEVENTS_ADMIN_PAGER', 'Listen Admin');
 \define('_MI_WGEVENTS_ADMIN_PAGER_DESC', 'Anzahl Einträge in Listen im Adminbereich');
+\define('_MI_WGEVENTS_TABLESORTER_USER', 'TableSorter Theme Benutzer');
+\define('_MI_WGEVENTS_TABLESORTER_USER_DESC', 'Bitte das TableSorter Theme für den Benutzer-Bereich wählen');
 \define('_MI_WGEVENTS_USER_PAGER', 'Listen User');
 \define('_MI_WGEVENTS_USER_PAGER_DESC', 'Anzahl Einträge in Listen im Userbereich');
 \define('_MI_WGEVENTS_SHOW_BREADCRUMBS', 'Brotkrumen-Navigation (breadcrumbs) anzeigen');
