@@ -4,7 +4,7 @@
 <{if $categories_list|default:''}>
 <{*    <table class='table table-bordered'>*}>
 
-    <{include file='db:admin_pagertop.tpl' }>
+    <{include file='db:tablesorter_pagertop.tpl' }>
 
     <table id="sortTable" class="tablesorter-<{$tablesorter_theme}>" cellspacing="1" cellpadding="0"  width="100%">
         <thead>
@@ -55,7 +55,7 @@
         <{/if}>
     </table>
     <div class="clear">&nbsp;</div>
-    <{include file='db:admin_pagerbottom.tpl' }>
+    <{include file='db:tablesorter_pagerbottom.tpl' }>
 <{/if}>
 <{if $form|default:''}>
     <{$form|default:false}>
