@@ -12,6 +12,8 @@
             <option value="20">20</option>
             <option value="30">30</option>
             <option value="40">40</option>
+            <option value="50">50</option>
+            <option value="100">100</option>
             <option value="all"><{$tablesorter_allrows}></option>
         </select>
     </form>
